--- a/style.css
+++ b/style.css
@@ -1,74 +1,295 @@
-body {
-    margin: 0;
-}
-html, body, .wrapper{
-    height: 100%;
+* {
+    font-family: 'Montserrat', sans-serif;
 }
 
-.wrapper{ 
+body {
+    margin: 0;
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+    color: #000000;
+}
+
+html,
+body,
+.wrapper {
+    width: 100vw;
+    height: 100%;
+    margin: 0;
+}
+
+img {
+    width: 100%;
+}
+
+li {
+    list-style: none;
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+}
+
+
+.wrapper {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 80px 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
     grid-template-areas: 'sidebar header header header header'
-                            'sidebar content content content content';
+        'sidebar content content content content';
 }
 
-.sidebar{
+.logo {
+    display: flex;
+    max-width: 100px;
+
+}
+
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 51px;
+    max-width: 252px;
+    background: #FFFFFF;
+    border-radius: 20px;
     grid-area: sidebar;
 }
 
-.header{
-    grid-area: header;
-    height: 80px;
+.explore {
+    display: flex;
+
+    text-align: center;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 37px;
+    margin-inline: auto;
+    margin-bottom: 55px;
+    margin-top: 57px;
 }
 
-.content{
-    margin-top: 20px;
+.dsc {
+    display: flex;
+    gap: 33px;
+    flex-direction: column;
+    font-weight: 500;
+    font-size: 15.7099px;
+    line-height: 19px;
+    color: #000000;
+    margin-inline: auto;
+
+    padding-left: 60px;
+}
+
+li:nth-child(1)::before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background: url(img/emoji/lightning.svg) no-repeat center center;
+    margin-right: 10px;
+}
+
+li:nth-child(2)::before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background: url(img/emoji/cloth.png) no-repeat center center;
+    margin-right: 10px;
+}
+
+li:nth-child(3)::before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background: url(img/emoji/shoes.png) no-repeat center center;
+    margin-right: 10px;
+}
+
+li:nth-child(4)::before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background: url(img/emoji/bag.png) no-repeat center center;
+    margin-right: 10px;
+}
+
+li:nth-child(5)::before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background: url(img/emoji/sportsman.png) no-repeat center center;
+    margin-right: 10px;
+}
+
+li:nth-child(6)::before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background: url(img/emoji/gift.png) no-repeat center center;
+    margin-right: 10px;
+}
+
+li:nth-child(7)::before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background: url(img/emoji/diamont.png) no-repeat center center;
+    margin-right: 10px;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 42px;
+    grid-area: header;
+    padding-right: 56px;
+
+}
+
+.item {
+    display: flex;
+    position: relative;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 21px;
+    color: #000000;
+    gap: 42px;
+}
+
+#item-1,
+#item-2,
+#item-3,
+#item-4 {
+    position: relative;
+}
+
+#item-1::after,
+#item-2::after,
+#item-3::after,
+#item-4::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: -8px;
+    left: 0;
+    background-color: #000000;
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform 0.2s ease-out;
+    
+}
+
+#item-1:hover::after,
+#item-2:hover::after,
+#item-3:hover::after,
+#item-4:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
+.content {
+    overflow: hidden;
+    margin-top: 76px;
     margin-inline: auto;
     max-width: 1100px;
     align-items: stretch;
     gap: 21px;
     grid-area: content;
     display: grid;
+    justify-content: center;
+    align-content: center;
     grid-template-areas: 'img1 img1 img3 img4'
-                            'img2 img2  img3 img4'
-                            'img5 img6 img7 img7'
-                            'img5 img6 img8 img8';
-                            
+        'img2 img2  img3 img4'
+        'img5 img6 img7 img7'
+        'img5 img6 img8 img8';
+
+
+
 }
-img{
+
+img {
     max-width: 100%;
     object-fit: cover;
 }
 
 .img1 {
     grid-area: img1;
+    max-width: 539px;
 }
 
 .img2 {
     grid-area: img2;
+    max-width: 539px;
 }
 
 .img3 {
     grid-area: img3;
+    max-width: 288px;
 }
 
 .img4 {
     grid-area: img4;
+    max-width: 288px;
 }
 
 .img5 {
     grid-area: img5;
+    max-width: 288px;
 }
 
 .img6 {
     grid-area: img6;
+    max-width: 288px;
 }
 
 .img7 {
     grid-area: img7;
+    max-width: 539px;
 }
 
 .img8 {
     grid-area: img8;
+    max-width: 539px;
+}
+
+@media (max-width: 1000px) {
+    .content {
+        display: grid;
+        grid-template-areas: 'img1 img1'
+        'img2 img2'
+        'img3 img4'
+        'img3 img4'
+        'img5 img6'
+        'img5 img6'
+        'img7 img7'
+        'img8 img8';
+    }
+}
+
+@media (max-width: 750px) {
+    .content {
+        display: grid;
+        grid-template-areas: 'img1 img1'
+        'img3'
+        'img2 img2'
+        'img4'
+        'img7 img7'
+        'img5'
+        'img8 img8'
+        'img6';
+    }
 }
